Thu May 15 10:05:00 UTC 2008  Simon Massey  <sma at prismtech dot com>

        * bin/msvc_mpc_auto_compile.pl:
          Split orbsvcs out from ciao build.

Thu May 15 07:09:15 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/ace.mpc:
          Added config-win32-msvc9.h, thanks to <tim at burmair dot com> for
          reporting this

Wed May 14 20:41:17  2008  Steve Huston  <shuston@riverace.com>

        * ace/Thread_Manager.h: Expanded the documentation, particularly for
          spawn[_n].

Wed May 14 18:30:15 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-irix6.x-common.h:
        * ace/config-linux-common.h:
        * ace/config-sunos5.4-g++.h:
        * ace/config-sunos5.4-sunc++-4.x.h:
        * ace/config-sunos5.5.h:
        * ace/config-tandem.h:
        * ace/config-unixware-7.1.0.h:
        * ace/config-unixware-7.1.0.udk.h:
        * ace/MonitorControl/MemoryUsageMonitor.cpp:
        * ace/MonitorControl/MemoryUsageMonitor.h:
        * ace/OS.inl:
        * ace/os_include/os_unistd.h:
        * ace/os_include/sys/os_resource.h:
        * ace/POSIX_Proactor.cpp:
        * ace/configure.ac:
          Seems we already had a ACE_HAS_SYSINFO but this is a different
          method but with the same name as we use in the monitoring code.
          Added ACE_HAS_SYS_SYSTEMINFO_H as new define, renamed the
          linux define to ACE_HAS_LINUX_SYSINFO

Wed May 14 18:14:15 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/ACE.cpp:
          Layout changes

        * ace/config-vxworks5.x.h:
        * ace/OS_NS_unistd.inl:
        * ace/Sock_Connect.cpp:
          Extended for VxWorks Medusa

        * ace/Logging_Strategy.cpp:
          Initialise pointer with 0

Wed May 14 14:26:15 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * include/makeinclude/platform_vxworks5.5.x.GNU:
          Detect medusa pid/pcd/pne

Wed May 14 12:34:15 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>
