@@ -1,3 +1,12 @@
+Thu May 15 10:17:15 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * ace/Unbounded_Set_Ex.cpp:
+          Fixed bug in the insert method
+
+        * ace/Unbounded_Set_Test.cpp:
+          Extended this test to reproduce the bug above and replaced all
+          ACE_ASSERTS with if checks
+
 Thu May 15 10:05:00 UTC 2008  Simon Massey  <sma at prismtech dot com>
 
         * bin/msvc_mpc_auto_compile.pl:
